# Circuitpython_BMA530

./: README.rst  bma530.py  pyproject.toml
.github/workflows/: release_gh.yml
examples/: circuitpython_bma530_simpletest.py
